make searchInput optional

--- a/external-user-directory-api/external-user-directory.yml
+++ b/external-user-directory-api/external-user-directory.yml
@@ -12,7 +12,7 @@ components:
       properties:
         searchInput:
           type: string
-          description: The search input to be used.  May be a substring or fuzzy match term.
+          description: (Optional) The search input to be used.  May be a substring or fuzzy match term.
           example: "Joe"
         maxResults:
           type: integer
